--- a/views/m_bonus.ejs
+++ b/views/m_bonus.ejs
@@ -25,7 +25,7 @@
         <div class="card-header d-flex">
           <div>
             <p>
-              55
+              50
               <small class="vg-ps"> 可使用的綠苗點</small>
             </p>
             <p class="vg-ps">
@@ -34,7 +34,7 @@
               </small>
             </p>
           </div>
-          <a href="#">
+          <a href="/activityboard">
             <span class="btn btn-vg-reg btn-vg-secondary">
             獲得更多點數
             </span>
@@ -49,7 +49,7 @@
                   <small class="text-muted">2023-09-05 16:27</small>
                 </p>
               </div>
-              <span>+5</span>
+              <span>+30</span>
             </li>
             <li class="list-group-item d-flex used">
               <div>
@@ -58,7 +58,7 @@
                   <small class="text-muted">2023-09-04 21:01</small>
                 </p>
               </div>
-              <span class="used">-10</span>
+              <span class="used">-35</span>
             </li>
             <li class="list-group-item d-flex">
               <div>
@@ -67,7 +67,25 @@
                   <small class="text-muted">2023-09-03 9:10</small>
                 </p>
               </div>
+              <span>+30</span>
+            </li>
+            <li class="list-group-item d-flex">
+              <div>
+                <p>每日轉盤抽獎</p>
+                <p class="vg-ps">
+                  <small class="text-muted">2023-09-02 19:30</small>
+                </p>
+              </div>
               <span>+15</span>
+            </li>
+            <li class="list-group-item d-flex">
+              <div>
+                <p>每日轉盤抽獎</p>
+                <p class="vg-ps">
+                  <small class="text-muted">2023-09-01 22:00</small>
+                </p>
+              </div>
+              <span>+10</span>
             </li>
         </ul>
       </div>
