--- a/views/m_mycards.ejs
+++ b/views/m_mycards.ejs
@@ -36,7 +36,7 @@
                     <img class="creditCL" src="img/mastercard2.png" alt="">
                   </div>
                   <div class="col-9">
-                    <p class="cardDefault">XXXX銀行</p>
+                    <p class="cardDefault">玉X銀行</p>
                   </div>
                   <div class="col-2">
                     <p>*173</p>
@@ -50,10 +50,10 @@
                     <img class="creditCL" src="img/jcb.png" alt="">
                   </div>
                   <div class="col-9">
-                    <p>XXXXXX銀行</p>
+                    <p>國X世華銀行</p>
                   </div>
                   <div class="col-2">
-                    <p>*173</p>
+                    <p>*233</p>
                   </div>
                 </a>
               </li>
