--- a/views/m_order.ejs
+++ b/views/m_order.ejs
@@ -30,7 +30,7 @@
   
               <li class="list-group-item col-12 row">
                 <div class="col-12 d-flex justify-content-between">
-                  <span>✤ 編號: 5230045</span>
+                  <span>✤ 編號: 8472034</span>
                   <span>2023-9-15</span>
                 </div>
                 <div class="col-3">
@@ -45,20 +45,20 @@
                   <p>單次配送</p>
                 </div>
                 <div class="col-3 order-button">
-                  <button class="btn">追蹤狀態</button>
+                  <a href="/rateorder"><button class="btn">評價訂單</button></a>
                   <button class="btn">聯絡客服</button>
-                  <button class="btn btn-vg-redborder">延後配送</button>
+                  <!-- <button class="btn btn-vg-redborder">延後配送</button> -->
                   <!-- <button class="btn">查看詳情</button> -->
                 </div>
   
                 <a href="#">
                   <div class="viewMoreP col-12 text-center">
-                    共 ? 樣商品，檢視更多商品
+                    共 3 樣商品，檢視更多商品
                   </div>
                 </a>
   
                 <div class="col-11">
-                  <span>訂單狀態: 配送中</span>
+                  <span>訂單狀態: 已完成</span>
                 </div>
                 <div class="col-1">
                   <span>$500</span>
