--- a/views/member_index.ejs
+++ b/views/member_index.ejs
@@ -47,13 +47,13 @@
                   <div class="col-3 order-button">
                     <button class="btn">追蹤狀態</button>
                     <button class="btn">聯絡客服</button>
-                    <button class="btn btn-vg-redborder">延後配送</button>
+                    <!-- <button class="btn btn-vg-redborder">延後配送</button> -->
                     <!-- <button class="btn">查看詳情</button> -->
                   </div>
     
                   <a href="#">
                     <div class="viewMoreP col-12 text-center">
-                      共 ? 樣商品，檢視更多商品
+                      共 3 樣商品，檢視更多商品
                     </div>
                   </a>
     
