--- a/views/share/m_HSidebar.ejs
+++ b/views/share/m_HSidebar.ejs
@@ -54,7 +54,8 @@
                     </div>
                     <div class="collapse" id="account-collapse" data-bs-parent="#sidB">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="/member/basicInfo" class="d-inline-flex text-decoration-none">基本資料</a></li>
+                            <li><a href="" class="d-inline-flex text-decoration-none" id="myuserInfo">基本資料</a>
+                            </li>
                             <li><a href="/member/myCards" class="d-inline-flex text-decoration-none">信用卡</a></li>
                             <li><a href="/member/address" class="d-inline-flex text-decoration-none">常用地址</a></li>
                             <li><a href="#" class="d-inline-flex text-decoration-none">更改密碼</a></li>
@@ -92,7 +93,7 @@
                     <button href="#" class="btn d-flex align-items-center collapsed fw-semibold"
                         data-bs-toggle="collapse" data-bs-target='#coins-collapse' aria-expanded="false"
                         aria-controls="coins-collapse">
-                        我的??點
+                        我的綠苗點
                     </button>
                     <div class="collapse" id="coins-collapse" data-bs-parent="#sidB">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -118,5 +119,5 @@
             </ul>
         </div>
 
-        <button id="memb-CS"></button>
+        <a href="/contact" class="CS"><div id="memb-CS"></div></a>
     </div>
