--- a/views/share/m_multF.ejs
+++ b/views/share/m_multF.ejs
@@ -1,9 +1,9 @@
 <div class="div-refer memb-multF">
-    <div class="test">
+    <!-- <div class="test">
       <h5 class="vg-h5 fw-semibold">蔬果曆</h5>
-    </div>
+    </div> -->
 
-    <div class="order-status">
+    <!-- <div class="order-status">
       <h5 class="vg-h5 fw-semibold">訂單狀態追蹤</h5>
       <div class="accordion accordion-flush" id="status">
         <div class="accordion-item">
@@ -54,7 +54,7 @@
           <div id="status-feedback" class="accordion-collapse collapse" aria-labelledby="non-feedback" data-bs-parent="#status">
             <div class="accordion-body">Placeholder content </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="accordion-item">
           <h2 class="accordion-header" id="after-sale">
