--- a/views/share/memb_link.ejs
+++ b/views/share/memb_link.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="css/vg.css">
-<link rel="stylesheet" href="css/memb.css">
-<link rel="stylesheet" href="css/memb-content.css">
-<link rel="stylesheet" href="css/memb-animation.css">
-<!-- <script src="js/memb.js"></script> -->
+<link rel="stylesheet" href="/css/vg.css">
+<link rel="stylesheet" href="/css/memb.css">
+<link rel="stylesheet" href="/css/memb-content.css">
+<link rel="stylesheet" href="/css/memb-animation.css">
+<script src="/js/memb.js"></script>
