--- a/views/m_order.ejs
+++ b/views/m_order.ejs
@@ -23,7 +23,7 @@
 
         <!-- content -->
         <div class="memb-content">
-          <h4 class="vg-h4">訂單總攬</h4>
+          <h4 class="vg-h4">訂單總覽</h4>
           
           <div class="memb-order row">
             <ul class="list-group">
