--- a/views/member_index.ejs
+++ b/views/member_index.ejs
@@ -30,7 +30,7 @@
     
                 <li class="list-group-item col-12 row">
                   <div class="col-12 d-flex justify-content-between">
-                    <span>✤ 編號: 5230045</span>
+                    <span>✤ 編號: 503835</span>
                     <span>2023-9-15</span>
                   </div>
                   <div class="col-3">
@@ -45,7 +45,7 @@
                     <p>單次配送</p>
                   </div>
                   <div class="col-3 order-button">
-                    <button class="btn">追蹤狀態</button>
+                    <a href="/rateorder"><button class="btn">訂單評價</button></a>
                     <button class="btn">聯絡客服</button>
                     <!-- <button class="btn btn-vg-redborder">延後配送</button> -->
                     <!-- <button class="btn">查看詳情</button> -->
