--- a/views/share/m_HSidebar.ejs
+++ b/views/share/m_HSidebar.ejs
@@ -67,7 +67,7 @@
                     <button href="#" class="btn d-flex align-items-center collapsed fw-semibold"
                         data-bs-toggle="collapse" data-bs-target="#subscribe-collapse" aria-expanded="false"
                         aria-controls="subscribe-collapse">
-                        訂單總攬
+                        訂單總覽
                     </button>
                     <div class="collapse" id="subscribe-collapse" data-bs-parent="#sidB">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
