0918 16:55 雅筑更新(在忽電腦)

--- a/views/activityboard_inside.ejs
+++ b/views/activityboard_inside.ejs
@@ -58,7 +58,7 @@
                         <div class="d-flex-column text-center border vg-bd-5 p-3 h-100">
 
                             <button class="btn btn-vg-reg lottoBtn" id="lotto">
-                                <h4 class="vg-h4">會員每日抽獎</h4>
+                                <h4 class="vg-h4">會員抽獎</h4>
                             </button>
                             <svg xmlns="http://www.w3.org/2000/svg" width="90%" viewBox="0 0 64 64">
 
