--- a/views/orderconfirm.ejs
+++ b/views/orderconfirm.ejs
@@ -332,7 +332,7 @@
                             )
                         )
 
-                        // 串接LINEPAY 金流 (未完成)
+                        // 串接LINEPAY 金流 (部分完成)
                         if (linepay.innerText == "linepay") {
                             // console.log('linepay')
                             // 轉址linepay v2 服務 (建立訂單)
@@ -356,7 +356,6 @@
                                 })
 
                         } else {
-                            // console.log('非linepay')
                             // 轉址
                             document.location.href = "/orderprocessing/"
                         }
